Added complex eigen value decomposition

--- a/eigenvectors.ipynb
+++ b/eigenvectors.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 1,
    "id": "64a00976-73d7-4cee-9d74-11caa4e1b485",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 2,
    "id": "0e2011f8-ea9c-4d7b-a9b7-f29d203d7fda",
    "metadata": {},
    "outputs": [
@@ -66,7 +66,7 @@
        "       [ 2,  1]])"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 3,
    "id": "979bda31-52df-42bc-a408-7308d98c844c",
    "metadata": {},
    "outputs": [
@@ -88,7 +88,7 @@
        "array([-2.64575131,  2.64575131])"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 4,
    "id": "ee1ca4ff-ae20-4fd9-8e92-ac25a602a127",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
        "       [ 0.48096517, -0.7721779 ]])"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 5,
    "id": "ddafb363-7ac9-4e82-a075-17581d153b72",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "array([-0.8767397 ,  0.48096517])"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 6,
    "id": "8ff5008f-519a-43c8-9e09-91dc254eda30",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "array([ 2.31963521, -1.27251423])"
       ]
      },
-     "execution_count": 215,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 7,
    "id": "013cd5c9-8e30-47eb-8b86-6a39a6c6b351",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
        "array([ 2.31963521, -1.27251423])"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 8,
    "id": "22c5051f-9fe3-403c-8aa1-f3ce9c857360",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,7 @@
        "        [ 2.,  1.]])"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 220,
+   "execution_count": 9,
    "id": "5a4c6a0d-78bb-4412-8833-af00b4a3a18b",
    "metadata": {},
    "outputs": [],
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 10,
    "id": "95aea442-0fbc-49d4-b863-b5832961cd75",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "tensor([-2.6458+0.j,  2.6458+0.j])"
       ]
      },
-     "execution_count": 221,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 222,
+   "execution_count": 11,
    "id": "93d36882-60e4-45f7-95c7-a8853276cc80",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "        [ 0.4810+0.j, -0.7722+0.j]])"
       ]
      },
-     "execution_count": 222,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,10 +272,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 12,
    "id": "eddaeefb-a096-48a6-9392-4b12f41a009f",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kumaraia\\AppData\\Local\\Temp\\ipykernel_299732\\2181166141.py:1: UserWarning: Casting complex values to real discards the imaginary part (Triggered internally at C:\\actions-runner\\_work\\pytorch\\pytorch\\builder\\windows\\pytorch\\aten\\src\\ATen\\native\\Copy.cpp:300.)\n",
+      "  V_float = V_cplx.float()\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -283,7 +291,7 @@
        "        [ 0.4810, -0.7722]])"
       ]
      },
-     "execution_count": 223,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 13,
    "id": "d77d5337-3858-4ec2-a579-d245e02cbbd6",
    "metadata": {},
    "outputs": [
@@ -305,7 +313,7 @@
        "tensor([ 2.3196, -1.2725])"
       ]
      },
-     "execution_count": 224,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 14,
    "id": "aa0ac03d-9ee7-4629-986b-dcb040c12db9",
    "metadata": {},
    "outputs": [
@@ -326,7 +334,7 @@
        "tensor([-2.6458,  2.6458])"
       ]
      },
-     "execution_count": 225,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 15,
    "id": "77c1b33e-356a-4a89-a980-5960040ec693",
    "metadata": {},
    "outputs": [
@@ -348,7 +356,7 @@
        "tensor([ 2.3196, -1.2725])"
       ]
      },
-     "execution_count": 226,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 16,
    "id": "3f583886-aa24-4ece-9cf0-e2b2ffd7bafc",
    "metadata": {},
    "outputs": [
@@ -380,7 +388,7 @@
        "       [ 2.,  1.]], dtype=float32)>"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 17,
    "id": "d081542a-8ba3-4562-b9cf-3236424e05ad",
    "metadata": {},
    "outputs": [],
@@ -402,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 18,
    "id": "67d20187-e181-48ed-9231-4f103e03194a",
    "metadata": {},
    "outputs": [
@@ -412,7 +420,7 @@
        "<tf.Tensor: shape=(2,), dtype=complex64, numpy=array([-2.6457515+0.j,  2.6457515+0.j], dtype=complex64)>"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 19,
    "id": "8ff930cc-8f27-4f6d-a57d-131162a790e4",
    "metadata": {},
    "outputs": [
@@ -435,7 +443,7 @@
        "       [ 0.48096517+0.j, -0.7721779 +0.j]], dtype=complex64)>"
       ]
      },
-     "execution_count": 233,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 20,
    "id": "d04e111c-6af6-45f8-b67d-296e30622d5d",
    "metadata": {},
    "outputs": [
@@ -466,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 21,
    "id": "e92c688e-f0ca-4636-b368-8687d77fde0c",
    "metadata": {},
    "outputs": [
@@ -477,7 +485,7 @@
        " <tf.Tensor: shape=(), dtype=float32, numpy=2.6457515>)"
       ]
      },
-     "execution_count": 237,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 22,
    "id": "d7d680d9-16e9-49b6-b687-2e43c77de119",
    "metadata": {},
    "outputs": [
@@ -505,7 +513,7 @@
        "<tf.Tensor: shape=(2,), dtype=float32, numpy=array([-0.87673974,  0.48096517], dtype=float32)>"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 23,
    "id": "d2d02a01-2322-446e-bc66-0aa4e4dc99fa",
    "metadata": {},
    "outputs": [
@@ -527,7 +535,7 @@
        "<tf.Tensor: shape=(2,), dtype=float32, numpy=array([ 2.3196354, -1.2725143], dtype=float32)>"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 24,
    "id": "eec1a6b9-a63d-434b-b833-bfe95e0d0911",
    "metadata": {},
    "outputs": [
@@ -549,7 +557,7 @@
        "<tf.Tensor: shape=(2,), dtype=float32, numpy=array([ 2.3196354, -1.2725143], dtype=float32)>"
       ]
      },
-     "execution_count": 240,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 25,
    "id": "2a591b2c-1bef-448c-b66f-13c4d8ddf482",
    "metadata": {},
    "outputs": [
@@ -581,7 +589,7 @@
        "       [ 3,  7, -1]])"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -593,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 26,
    "id": "fed236ef-a61d-44d8-a85c-99cac9e9f41c",
    "metadata": {},
    "outputs": [],
@@ -603,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 27,
    "id": "e5dd1e7b-c7bd-40ed-8579-e58723558c77",
    "metadata": {},
    "outputs": [
@@ -613,7 +621,7 @@
        "array([29.67623202, 20.62117365, -0.29740567])"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 28,
    "id": "86a779aa-cd1b-4e6d-a787-af18909c0813",
    "metadata": {},
    "outputs": [
@@ -636,7 +644,7 @@
        "       [-0.22170001,  0.15086635,  0.90901091]])"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -647,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 29,
    "id": "986fe5bd-7939-4415-8272-81e9afd94a22",
    "metadata": {},
    "outputs": [],
@@ -657,7 +665,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 30,
    "id": "1be505f8-1e31-42e6-86aa-ec0cb48fdc4a",
    "metadata": {},
    "outputs": [
@@ -667,7 +675,7 @@
        "array([-21.12227645, -19.77983919,  -6.5792208 ])"
       ]
      },
-     "execution_count": 246,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -678,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 31,
    "id": "21a6f10d-fc79-409a-9149-d5f261440787",
    "metadata": {},
    "outputs": [
@@ -688,7 +696,7 @@
        "array([-21.12227645, -19.77983919,  -6.5792208 ])"
       ]
      },
-     "execution_count": 251,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
