--- a/svd.ipynb
+++ b/svd.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "f33fcf57-bd76-4fc9-a2e3-d1e440008bfd",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "9011a408-e036-4375-ba7b-d234c3ad9207",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "06902eba-b3f9-4511-bd2c-64349093dcc6",
    "metadata": {},
    "outputs": [
@@ -52,7 +52,7 @@
        "       [ 0.99189069, -0.0592843 , -0.11241989]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "e02ab0c8-abc4-4949-84b5-bd63d6bbd41f",
    "metadata": {},
    "outputs": [
@@ -73,7 +73,7 @@
        "array([8.66918448, 4.10429538])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "f3595638-ace8-4c45-a08b-5d123b1bbcd9",
    "metadata": {},
    "outputs": [
@@ -95,7 +95,7 @@
        "       [-0.82984845,  0.55798885]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "id": "8606829d-c4e3-4fd6-ac11-5b5b58d73ae8",
    "metadata": {},
    "outputs": [
@@ -117,7 +117,7 @@
        "       [ 0.82984845,  0.55798885]])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 11,
    "id": "6bce5dd0-1e7b-4b23-80c1-faad62e03ef3",
    "metadata": {},
    "outputs": [
@@ -141,7 +141,7 @@
        "       [0.        , 0.        ]])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "id": "4e32dde3-27e9-4c57-9762-0c21b5d3139a",
    "metadata": {},
    "outputs": [
@@ -165,7 +165,7 @@
        "       [ 5.,  7.]])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,8 +176,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "19499b20-e225-4ed2-9828-385032a29fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.12708324],\n",
+       "       [0.00164602],\n",
+       "       [0.99189069]])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "U[:,:1] # meaning all rows but only one one column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "23da9bdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.6147408 , 0.91425071],\n",
+       "       [0.00796231, 0.01184165],\n",
+       "       [4.79808104, 7.13577001]])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A_approx = np.dot(U, np.dot([[S[0]]], VT[:1, :]))\n",
+    "A_approx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5cc7f41c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.52307784,  3.75235495],\n",
+       "       [ 0.03267967,  0.04860164],\n",
+       "       [19.69274183, 29.28730783]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.dot(S[1], A_approx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "df18be71",
    "metadata": {},
    "outputs": [],
    "source": []
